# procurement-scraper

./: .env.example  .gitignore  POETRY.md  README.md  pyproject.toml
src/: main.py  settings.py
