[project]
name = "us-procurement-scraper" # Name of the project
version = "0.1.0" # Version of the project
description = "US Government Procurement Scraper with AI Analysis" # Description of the project
package-mode = false
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



